manifests/ignite-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ignite-cluster
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ignite
  template:
    metadata:
      labels:
        app: ignite
    spec:
      serviceAccountName: ignite
      terminationGracePeriodSeconds: 60000
      containers:
      - name: ignite-node
        image: priyangd/my-custom-ignite:latest
        ports:
          - containerPort: 47100 # communication SPI port
          - containerPort: 47500 # discovery SPI port
          - containerPort: 49112 # dafault JMX port
          - containerPort: 10800 # thin clients/JDBC driver port
          - containerPort: 8080 # REST API
