manifests/distributed-cache-component.yaml
apiVersion: v1
kind: Service
metadata:
  name: distributed-cache-component
  labels:
    app: ignite
    service: distributed-cache
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
      nodePort: 30085
  selector:
    app: ignite
    service: distributed-cache
