manifests/distributed-cache-component-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: distributed-cache-component-ingress
spec:
  tls:
    - hosts:
      - distributed-cache-component.local
      secretName: my-secret-tls
  rules:
    - host: distributed-cache-component.local
      http:
        paths:
          - path: /distributed_cache_component
            pathType: Prefix
            backend:
              service:
                name: distributed-cache-component
                port:
                  number: 80
